--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
     <header>
-	<img src="images/logo.png" alt="Group Logo" class="logo">
+	<img src="logo.png" alt="Group Logo" class="logo">
         <h1>Spintronics with Chiral Helimagnetic Insulators</h1>
         <p>Exploring spin transport properties in noncollinear magnetic materials</p>
     </header>
