--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
             color: #333;
         }
         header {
-        background-color: #333;
-        color: #fff;
-        padding: 10px 0;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .logo {
-        margin-right: 15px; /* Add space between the logo and the title */
-        height: 50px; /* Adjust the height as needed */
-    }
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .logo {
+            margin-right: 15px;
+            height: 50px;
+        }
         nav {
             text-align: center;
             margin: 10px 0;
@@ -76,9 +76,11 @@
 </head>
 <body>
     <header>
-	<img src="logo.png" alt="Group Logo" class="logo">
-        <h1>Spintronics with Chiral Helimagnetic Insulators</h1>
-        <p>Exploring spin transport properties in noncollinear magnetic materials</p>
+        <img src="logo.png" alt="Group Logo" class="logo">
+        <div>
+            <h1>Spintronics with Chiral Helimagnetic Insulators</h1>
+            <p>Exploring spin transport properties in noncollinear magnetic materials</p>
+        </div>
     </header>
     <nav>
         <a href="#about">About Us</a>
