--- a/index.html
+++ b/index.html
@@ -4,75 +4,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spintronics with Helimagnetic Insulators - Aisha Aqeel's Research Group</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px 0;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .logo {
-            margin-right: 15px;
-            height: 100px;
-        }
-        nav {
-            text-align: center;
-            margin: 10px 0;
-        }
-        nav a {
-            margin: 0 15px;
-            color: #333;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        .section h2 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 10px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        .profile-img {
-            float: right;
-            margin: 10px;
-            border-radius: 50%;
-            width: 150px;
-        }
-        .team-member, .publication {
-            border-bottom: 1px solid #ddd;
-            padding: 10px 0;
-        }
-        .team-member img, .publication img {
-            width: 50px;
-            border-radius: 50%;
-            vertical-align: middle;
-        }
-    </style>
+   <style>
+    /* Existing styles */
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f9;
+        color: #333;
+    }
+    header {
+        background-color: #333;
+        color: #fff;
+        padding: 10px 0;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .logo {
+        margin-right: 15px;
+        height: 50px;
+    }
+    nav {
+        text-align: center;
+        margin: 10px 0;
+    }
+    nav a {
+        margin: 0 15px;
+        color: #333;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    .container {
+        width: 80%;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #fff;
+    }
+    .section {
+        margin-bottom: 40px;
+    }
+    .section h2 {
+        border-bottom: 2px solid #333;
+        padding-bottom: 10px;
+    }
+    footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px 0;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+    }
+    
+    /* Updated styles to remove image rounding */
+    .profile-img,
+    .team-member img,
+    .publication img {
+        border-radius: 0; /* Remove rounding */
+        width: auto; /* Keep the original width */
+        height: auto; /* Keep the original height */
+    }
+</style>
 </head>
 <body>
     <header>
